--- a/itis3135/calculator_try.html
+++ b/itis3135/calculator_try.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <script src="./scripts/calculator_try.js"></script>
         <script src="./scripts/alert.js" ></script>
+        <script src="./scripts/calculator_try.js"></script>
         <title>Rachel Taylor >> ITIS 3135 >> Calculator Try</title>
     </head>
     <body>
@@ -29,6 +29,8 @@
             <a href="calculator_try.html">Calculator Try</a>
              ||
             <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
+             ||
+            <a href="arrays.html">Arrays</a>
         </nav>
         <main>
             <h2>Calculator Try</h2>
