--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -28,6 +28,8 @@
             <a href="calculator_try.html">Calculator Try</a>
              ||
             <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
+             ||
+            <a href="arrays.html">Arrays</a>
         </nav>
         <main>
             <h2>Introduction</h2>
