--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -27,4 +27,6 @@
             <a href="calculator_try.html">Calculator Try</a>
              ||
             <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
+             ||
+            <a href="arrays.html">Arrays</a>
         </nav>
