--- a/itis3135/website-evaluations.html
+++ b/itis3135/website-evaluations.html
@@ -27,6 +27,8 @@
             <a href="calculator_try.html">Calculator Try</a>
              ||
             <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
+             ||
+            <a href="arrays.html">Arrays</a>
         </nav>
         <main>
             <h2>Website Evaluations</h2>
