project design html added

--- a/itis3135/calculator_try.html
+++ b/itis3135/calculator_try.html
@@ -11,27 +11,29 @@
         <header>
             <h1>Rachel Taylor >> ITIS 3135 >> Calculator Try</h1>
         </header>
-        <nav>
-            <a href="index.html">Index</a>
-             ||
-            <a href="introduction.html">Introduction</a>
-             ||
-            <a href="tables.html">HTML Tables</a>
-             ||
-            <a href="forms.html">HTML Forms</a>
-             ||
-            <a href="website-evaluations.html">Website Evaluations</a>
-             ||
-            <a href="first-scripts.html">First Scripts</a>
-             ||
-            <a href="name-the-polygon.html">Name The Polygon</a>
-             ||
-            <a href="calculator_try.html">Calculator Try</a>
-             ||
-            <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
-             ||
-            <a href="arrays.html">Arrays</a>
-        </nav>
+            <nav>
+                <a href="index.html">Index</a>
+                ||
+                <a href="introduction.html">Introduction</a>
+                ||
+                <a href="tables.html">HTML Tables</a>
+                ||
+                <a href="forms.html">HTML Forms</a>
+                ||
+                <a href="website-evaluations.html">Website Evaluations</a>
+                ||
+                <a href="first-scripts.html">First Scripts</a>
+                ||
+                <a href="name-the-polygon.html">Name The Polygon</a>
+                ||
+                <a href="calculator_try.html">Calculator Try</a>
+                ||
+                <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
+                ||
+                <a href="arrays.html">Arrays</a>
+                ||
+                <a href="project_rand.html">Project Design</a>
+            </nav>
         <main>
             <h2>Calculator Try</h2>
                 <h3>Description</h3>
