--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -9,24 +9,26 @@
         <header>
             <h1>I'm Rachel Taylor, and this is my ITIS3135 First Course Page.</h1>
         </header>
-        <nav>
-            <a href="index.html">Index</a>
-             ||
-            <a href="introduction.html">Introduction</a>
-             ||
-            <a href="tables.html">HTML Tables</a>
-             ||
-            <a href="forms.html">HTML Forms</a>
-             ||
-            <a href="website-evaluations.html">Website Evaluations</a>
-             ||
-            <a href="first-scripts.html">First Scripts</a>
-             ||
-            <a href="name-the-polygon.html">Name The Polygon</a>
-             ||
-            <a href="calculator_try.html">Calculator Try</a>
-             ||
-            <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
-             ||
-            <a href="arrays.html">Arrays</a>
-        </nav>
+            <nav>
+                <a href="index.html">Index</a>
+                ||
+                <a href="introduction.html">Introduction</a>
+                ||
+                <a href="tables.html">HTML Tables</a>
+                ||
+                <a href="forms.html">HTML Forms</a>
+                ||
+                <a href="website-evaluations.html">Website Evaluations</a>
+                ||
+                <a href="first-scripts.html">First Scripts</a>
+                ||
+                <a href="name-the-polygon.html">Name The Polygon</a>
+                ||
+                <a href="calculator_try.html">Calculator Try</a>
+                ||
+                <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
+                ||
+                <a href="arrays.html">Arrays</a>
+                ||
+                <a href="project_rand.html">Project Design</a>
+            </nav>
