--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -29,6 +29,8 @@
             <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
              ||
             <a href="arrays.html">Arrays</a>
+             ||
+            <a href="project_rand.html">Project Design</a>
         </nav>
         <main>
             <h2>HTML Tables</h2>
