updating based off of critique

--- a/itis3135/brand-rapid-tree-frog.html
+++ b/itis3135/brand-rapid-tree-frog.html
@@ -3,16 +3,41 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/brand.css" rel="stylesheet" type="text/css">
-        <title>Rachel Taylor, ITIS 3135, Whimsical Brand</title>
+        <title>Rachel Taylor | ITIS 3135 | Whimsical Brand</title>
     </head>
     <body>
         <header>
-            <h1>Rapid Tree Frog Industries 
+            <h1>Rachel Taylor &middot; ITIS 3135 &middot; Rapid Tree Frog Industries 
                 <a href="https://openclipart.org/image/800px/178444">
                     <img src="images/tree-frog-openclipart-org.png" height="60" width="60" alt="tree frog">
                 </a>
             </h1>
         </header>
+            <nav>
+                <a href="index.html">Home</a>
+                ||
+                <a href="introduction.html">Introduction</a>
+                ||
+                <a href="tables.html">HTML Tables</a>
+                ||
+                <a href="forms.html">HTML Forms</a>
+                ||
+                <a href="CrAppY-WeBpaGE.html">CRAPPY Webpage</a>
+                ||
+                <a href="website-evaluations.html">Website Evaluations</a>
+                <br>
+                <a href="first-scripts.html">First Scripts</a>
+                ||
+                <a href="name-the-polygon.html">Name The Polygon</a>
+                ||
+                <a href="calculator-try.html">Calculator Try</a>
+                ||
+                <a href="calculator-fcc.html">Calculator freeCodeCamp Tutorial</a>
+                ||
+                <a href="arrays.html">Arrays</a>
+                ||
+                <a href="project-rand.html">Project Design</a>
+            </nav>
         <main>
             <h2>Rapid Tree Frog Industries Brand Page</h2>
             <p>
@@ -48,8 +73,21 @@
             </p>
         </main>
         <footer>
-            <p>Page built by RTFIndustries&copy;</p>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fbrand-rapid-tree-frog.html">
+            <nav>
+                <a href="https://webpages.uncc.edu/rtaylo96/" target="_blank">Charlotte.edu</a>
+                 || 
+                <a href="https://github.com/rtaylo96" target="_blank">Github</a>
+                 || 
+                <a href="https://rtaylo96.github.io" target="_blank">Github.io</a>
+                 ||
+                <a href="https://rtaylo96.github.io/itis3135/" target="_blank">ITIS 3135 Github Pages</a>
+                 ||
+                <a href="https://www.freecodecamp.org/rtaylo96" target="_blank">freeCodeCamp</a>
+                 ||
+                <a href="https://www.linkedin.com/in/rachel-taylor-bb896b143/" target="_blank">LinkedIn</a>
+            </nav>
+            <p>Website built by <a href="brand-rapid-tree-frog.html">RTFIndustries&copy;2021</a></p>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fbrand-rapid-tree-frog.html" style="text-decoration: none;">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
             <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fbrand-rapid-tree-frog.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
