--- a/itis3135/CrAppY-WeBpaGE.html
+++ b/itis3135/CrAppY-WeBpaGE.html
@@ -3,13 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <script src="./scripts/alert.js" ></script>
-        <script src="./scripts/shape.js"></script>
-        <title>Rachel Taylor | ITIS 3135 | Name The Polygon</title>
+        <title>Rachel Taylor | ITIS 3135 | CRAPPY Webpage</title>
     </head>
     <body>
         <header>
-            <h1>Rachel Taylor &middot; ITIS 3135 &middot; Name The Polygon</h1>
+            <h1>Rachel Taylor &middot; ITIS 3135 &middot; CRAPPY Webpage</h1>
         </header>
             <nav>
                 <a href="index.html">Home</a>
@@ -37,23 +35,38 @@
                 <a href="project-rand.html">Project Design</a>
             </nav>
         <main>
-            <h2>Name The Polygon</h2>
-                <h3>Description</h3>    
-                    <p>
-                        This webpage is used by Rapid Tree Frog Industries to have practice using 
-                        if statements, loops, and functions in JavaScript.  
-                    </p>
-                    <p>
-                        If you'd like to run the JavaScript again, just refresh the page!
-                    </p>
-                <h3>Disclaimer</h3>
-                    <p>
-                        The work submitted here is my work - I have not copied and pasted code into these pages. 
-                        I have gotten help from these sites: <a href="https://www.w3schools.com/jsref/jsref_round.asp">https://www.w3schools.com/jsref/jsref_round.asp</a>,
-                        <a href="https://www.w3schools.com/jsref/jsref_abs.asp">https://www.w3schools.com/jsref/jsref_abs.asp</a>, and 
-                        <a href="https://www.w3schools.com/js/js_functions.asp">https://www.w3schools.com/js/js_functions.asp</a> 
-                    </p>
-                    <p>- Rachel M. Taylor, September 29th, 2021 at 8:57PM </p>
+            <h2>CRAPPY Webpage</h2>
+            <br>
+            <br>
+            <br>
+            <img src="images/5069596341_91e5c7ad4b_k" width="400" heigh="400" name="Patch Picks Pumpkins Plump and Pretty Pumpkins">
+            <h3 style="color: turquoise">I like seashells, I pick seashells down by the seashore</h3>
+            <br>
+            <br>
+        <div style="border-style: dotted dashed solid double;">
+            <p style="text-align: right">tHiS Is A mIxEd BoRdEr!</p>
+        </div>
+        <p style="font-family: Papyrus, fantasy; margin-top: 25%">This is comic sans text font</p> <br>
+        <a style="font-family: Comic Sans MS, Comic Sans; color: pink"><p>This is papyrus text font</p></a>
+        <a style="font-family: Times;"><p>This is comic papyrus text font</p></a>
+        <img src="https://flic.kr/p/8HZ1nt" name="Not A Cat" style="margin-bottom: 45%">
+            <h2>This is a Photo of Cats</h2>
+        <div style="text-align: center">
+            <ul>
+                <li style="background-color: yellowgreen;">This</li>
+                <li><u>List</u></li>
+                <li>Is</li>
+                <li style="background-color: tomato;">Centered</li>
+            </ul>
+            <br>
+            <br>
+            <p>This Paragraph is centered</p>
+            <br>
+        </div>
+        <p style="font-size: 60px;">This paragraph has huge text</p>
+        <br>
+        <br>
+        <br>
         </main>
         <footer>
             <nav>
@@ -70,11 +83,12 @@
                 <a href="https://www.linkedin.com/in/rachel-taylor-bb896b143/" target="_blank">LinkedIn</a>
             </nav>
             <p>Website built by <a href="brand-rapid-tree-frog.html">RTFIndustries&copy;2021</a></p>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fname-the-polygon.html" style="text-decoration: none;">
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2FCRAPPY%2520WEBPAGE%21.htm" style="text-decoration: none;">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fname-the-polygon.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2FCRAPPY%2520WEBPAGE%21.htm&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                 <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
             </a>
         </footer>
     </body>
+</html>
