--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <title>Rachel Taylor, ITIS 3135, HTML Forms</title>
+        <title>Rachel Taylor | ITIS 3135 | HTML Forms</title>
     </head>
     <body>
         <header>
-            <h1>Rachel Taylor >> ITIS 3135 >> HTML Forms</h1>
+            <h1>Rachel Taylor &middot; ITIS 3135 &middot; HTML Forms</h1>
         </header>
             <nav>
-                <a href="index.html">Index</a>
+                <a href="index.html">Home</a>
                 ||
                 <a href="introduction.html">Introduction</a>
                 ||
@@ -18,19 +18,21 @@
                 ||
                 <a href="forms.html">HTML Forms</a>
                 ||
-                <a href="website-evaluations.html">Website Evaluations</a>
+                <a href="CrAppY-WeBpaGE.html">CRAPPY Webpage</a>
                 ||
+                <a href="website-evaluations.html">Website Evaluations</a>
+                <br>
                 <a href="first-scripts.html">First Scripts</a>
                 ||
                 <a href="name-the-polygon.html">Name The Polygon</a>
                 ||
-                <a href="calculator_try.html">Calculator Try</a>
+                <a href="calculator-try.html">Calculator Try</a>
                 ||
-                <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
+                <a href="calculator-fcc.html">Calculator freeCodeCamp Tutorial</a>
                 ||
                 <a href="arrays.html">Arrays</a>
                 ||
-                <a href="project_rand.html">Project Design</a>
+                <a href="project-rand.html">Project Design</a>
             </nav>
         <main>
             <h2>HTML Forms</h2>
@@ -82,9 +84,8 @@
                  ||
                 <a href="https://www.linkedin.com/in/rachel-taylor-bb896b143/" target="_blank">LinkedIn</a>
             </nav>
-            <br>
-            <p>Page built by RTFIndustries&copy;</p>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fforms.html">
+            <p>Website built by <a href="brand-rapid-tree-frog.html">RTFIndustries&copy;2021</a></p>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fforms.html" style="text-decoration: none;">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
             <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fforms.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
