--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <title>ITIS3135 First Course Page</title>
+        <title>Rachel Taylor| ITIS 3135 | Home</title>
     </head>
     <body>
         <header>
-            <h1>I'm Rachel Taylor, and this is my ITIS3135 First Course Page.</h1>
+            <h1>Rachel Taylor &middot; ITIS 3135 &middot; Home</h1>
         </header>
             <nav>
-                <a href="index.html">Index</a>
+                <a href="index.html">Home</a>
                 ||
                 <a href="introduction.html">Introduction</a>
                 ||
@@ -18,17 +18,73 @@
                 ||
                 <a href="forms.html">HTML Forms</a>
                 ||
-                <a href="website-evaluations.html">Website Evaluations</a>
+                <a href="CrAppY-WeBpaGE.html">CRAPPY Webpage</a>
                 ||
+                <a href="website-evaluations.html">Website Evaluations</a>
+                <br>
                 <a href="first-scripts.html">First Scripts</a>
                 ||
                 <a href="name-the-polygon.html">Name The Polygon</a>
                 ||
-                <a href="calculator_try.html">Calculator Try</a>
+                <a href="calculator-try.html">Calculator Try</a>
                 ||
-                <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
+                <a href="calculator-fcc.html">Calculator freeCodeCamp Tutorial</a>
                 ||
                 <a href="arrays.html">Arrays</a>
                 ||
-                <a href="project_rand.html">Project Design</a>
+                <a href="project-rand.html">Project Design</a>
             </nav>
+        <main>
+            <h2>Home</h2>
+            <p>I'm Rachel Taylor, and this is my ITIS 3135 First Course website.</p>
+            <h3>Webpage Summaries</h3>
+                <h4>Introduction</h4>
+                    <p>This webpage is an introduction of myself where you can get to know more about me.</p>
+                <h4>HTML Tables</h4>
+                    <p>This webpage is used for learning how to properly code HTML Tables.</p>
+                <h4>HTML Forms</h4>
+                    <p>Another webpage that was used for learning how to properly code forms into HTML.</p>
+                <h4>CRAPPY Webpage</h4>
+                    <p>A webpage that is not following CRAPPY standards of CSS and HTML.</p>
+                <h4>Website Evaluations</h4>
+                    <p>On this webpage I evaluated two websites using the CRAPPY standards. One website is a good example and the other is a bad example.</p>
+                <h4>First Scripts</h4>
+                    <p>This webpage is the first to use JavaScripts.</p>
+                <h4>Name the Polygon</h4>
+                    <p>Using JavaScript, we make a webpage that will evaluate what the name of a polygon is with the given sides from the user.</p>
+                <h4>Calculator Try</h4>
+                    <p>This webpage is an attempt to make a calculator using JavaScript. It did not go very well, but it was an attempt.</p>
+                <h4>Calculator freeCodeCamp Tutorial</h4>
+                    <p>
+                        A calculator was made on this webpage using JavaScript. This webpage was made using the freeCodeCamp Tutorial 
+                        <a href="https://www.freecodecamp.org/news/how-to-build-an-html-calculator-app-from-scratch-using-javascript-4454b8714b98/">found here</a>.
+                    </p>
+                <h4>Arrays</h4>
+                    <p>This page is playing with arrays in JavaScript and being sure we have an understanding of arrays in JavaScript.</p>
+                <h4>Project Design</h4>
+                    <p>A webpage that is used for summarizing the webpages that will be used for our semester long project.</p>
+        </main>
+        <footer>
+            <nav>
+                <a href="https://webpages.uncc.edu/rtaylo96/" target="_blank">Charlotte.edu</a>
+                 || 
+                <a href="https://github.com/rtaylo96" target="_blank">Github</a>
+                 || 
+                <a href="https://rtaylo96.github.io" target="_blank">Github.io</a>
+                 ||
+                <a href="https://rtaylo96.github.io/itis3135/" target="_blank">ITIS 3135 Github Pages</a>
+                 ||
+                <a href="https://www.freecodecamp.org/rtaylo96" target="_blank">freeCodeCamp</a>
+                 ||
+                <a href="https://www.linkedin.com/in/rachel-taylor-bb896b143/" target="_blank">LinkedIn</a>
+            </nav>
+            <p>Website built by <a href="brand-rapid-tree-frog.html">RTFIndustries&copy;2021</a></p>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Findex.html" style="text-decoration: none;">
+                <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
+            </a>
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+                <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
+            </a>
+        </footer>
+    </body>
+</html>
