--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -4,84 +4,86 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <title>Rachel Taylor, ITIS 3135, Introduction</title>
+        <title>Rachel Taylor | ITIS 3135 | Introduction</title>
     </head>
     <body>
         <header>
-            <h1>Rachel Taylor >> ITIS 3135 >> Introduction</h1>
+            <h1>Rachel Taylor &middot; ITIS 3135 &middot; Introduction</h1>
         </header>
-        <nav>
-            <a href="index.html">Index</a>
-             ||
-            <a href="introduction.html">Introduction</a>
-             ||
-            <a href="tables.html">HTML Tables</a>
-             ||
-            <a href="forms.html">HTML Forms</a>
-             ||
-            <a href="website-evaluations.html">Website Evaluations</a>
-             ||
-            <a href="first-scripts.html">First Scripts</a>
-             ||
-            <a href="name-the-polygon.html">Name The Polygon</a>
-             ||
-            <a href="calculator_try.html">Calculator Try</a>
-             ||
-            <a href="calculator_fcc.html">Calculator freeCodeCamp Tutorial</a>
-             ||
-            <a href="arrays.html">Arrays</a>
-             ||
-            <a href="project_rand.html">Project Design</a>
-        </nav>
+            <nav>
+                <a href="index.html">Home</a>
+                ||
+                <a href="introduction.html">Introduction</a>
+                ||
+                <a href="tables.html">HTML Tables</a>
+                ||
+                <a href="forms.html">HTML Forms</a>
+                ||
+                <a href="CrAppY-WeBpaGE.html">CRAPPY Webpage</a>
+                ||
+                <a href="website-evaluations.html">Website Evaluations</a>
+                <br>
+                <a href="first-scripts.html">First Scripts</a>
+                ||
+                <a href="name-the-polygon.html">Name The Polygon</a>
+                ||
+                <a href="calculator-try.html">Calculator Try</a>
+                ||
+                <a href="calculator-fcc.html">Calculator freeCodeCamp Tutorial</a>
+                ||
+                <a href="arrays.html">Arrays</a>
+                ||
+                <a href="project-rand.html">Project Design</a>
+            </nav>
         <main>
             <h2>Introduction</h2>
             <figure>
-                <a href="images/IMG_0721.jpg">
-                    <img src="images/IMG_0721.jpg" height="200" alt="pfp">
+                <a href="images/selfie-in-favorite-hoodie.jpg">
+                    <img src="images/selfie-in-favorite-hoodie.jpg" height="200" alt="Selfie in my favorite hoodie">
                 </a>
-                <figcaption>Rachel Taylor in her Favorite Hoodie - photo by Rachel Taylor</figcaption>
+                <figcaption>Selfie in my Favorite Hoodie</figcaption>
             </figure>
             <ul>
                 <li>
-                    "Personal Background: I was born in Pennsylvania, but moved to North Carolina when I was 10. My freshmen year I started at Central Piedmont Community College (CPCC) for my Associates in Arts. I then transferred to the University of North Carolina at Charlotte (UNCC) to get my Bachelors in Computer Science."
+                    Personal Background: I was born in Pennsylvania, but moved to North Carolina when I was 10. My freshmen year I started at Central Piedmont Community College (CPCC) for my Associates in Arts. I then transferred to the University of North Carolina at Charlotte (UNCC) to get my Bachelors in Computer Science.
                 </li>
                 <li>
-                    "Professional: I started working part time when I was 18 and have been working at Carowinds ever since. More recently I have been a Teaching Assistant for 1213 - Introduction to Computer Science II, since Spring 2020."
+                    Professional: I started working part time when I was 18 and have been working at Carowinds ever since. More recently I have been a Teaching Assistant for 1213 - Introduction to Computer Science II, since Spring 2020.
                 </li>
                 <li>
-                    "Academic Background: I graduated high school at East Mecklenburg High School. I graduated from CPCC in Spring 2019 with my Associates in Arts. I am currently attending UNCC for my Bachelors in Computer Science with a concentration in AI, Gaming and Robotics."
+                    Academic Background: I graduated high school at East Mecklenburg High School. I graduated from CPCC in Spring 2019 with my Associates in Arts. I am currently attending UNCC for my Bachelors in Computer Science with a concentration in AI, Gaming and Robotics.
                 </li>
                 <li>
-                    "Background in the Subject Matter of this Course: I've been learning programming language since I started in college at CPCC. When I first learned you could used computer programming languages to make a webpage, I looked up a tutorial on YouTube to code one on my own to get excited about Computer Science in general. I have a rough general knowledge of HTML and CSS."
+                    Background in the Subject Matter of this Course: I've been learning programming language since I started in college at CPCC. When I first learned you could used computer programming languages to make a webpage, I looked up a tutorial on YouTube to code one on my own to get excited about Computer Science in general. I have a rough general knowledge of HTML and CSS.
                 </li>
                 <li>
-                    "Primary Computer Platform: Windows 10"
+                    Primary Computer Platform: Windows 10
                 </li>
                 <li>
-                    "Courses I'm taking and reason for: "
+                    Courses I'm taking and reason for: 
                     <ul>
                         <li>
-                            "ITCS 3120 - Intro Interactive Comp Graphics - Taking for Fun"
+                            ITCS 3120 - Introduction to Interactive Computer Graphics - Taking for Fun
                         </li>
                         <li>
-                            "ITCS 4236 - Artificial Intell Comp Games - Taking for Fun"
+                            ITCS 4236 - Artificial Intelligence Computer Games - Taking for Fun
                         </li>
                         <li>
-                            "ITIS 3135 - Web Design and Development - Taking for Fun"
+                            ITIS 3135 - Web Design and Development - Taking for Fun
                         </li>
                         <li>
-                            "ITSC 3138 - Intro to Comp Architecture - Required for BS"
+                            ITSC 3138 - Introduction to Computer Architecture - Required for BS
                         </li>
                         <li>
-                            "ITSC 1213 - Intro to Comp Sci II - Teaching as a TA for my fourth semester"
+                            ITSC 1213 - Introduction to Computer Science II - Teaching as a TA for my fourth semester
                         </li>
                     </ul>
                 </li>
                 <li>
-                    "Funny Story or Interesting Item about yourself to remember you by: As mentioned before, I work at Carowinds, but in the live entertainment department as a Scare Actor. I really enjoy unwinding in the fall by working at SCarowinds and scaring guest. I have been a zombie at Zombie High, a dirt merchant at Dead Man's Landing, a body parts saleswomen in Fleet Street, and this year I will be returning to Dead Man's Landing as a sea hag!"
+                    Funny Story or Interesting Item about yourself to remember you by: As mentioned before, I work at Carowinds, but in the live entertainment department as a Scare Actor. I really enjoy unwinding in the fall by working at SCarowinds and scaring guest. I have been a zombie at Zombie High, a dirt merchant at Dead Man's Landing, a body parts saleswomen in Fleet Street, and this year I will be returning to Dead Man's Landing as a sea hag!
                 </li>
                 <li>
-                    "I'd also like to share: I am a Sister of Alpha Omega Epsilon, the only STEM based sorority on campus, as the Membership Educator."
+                    I'd also like to share: I am a Sister of Alpha Omega Epsilon, the only STEM based sorority on campus, as the Membership Educator.
                 </li>
             </ul>
         </main>
@@ -99,9 +101,8 @@
                  ||
                 <a href="https://www.linkedin.com/in/rachel-taylor-bb896b143/" target="_blank">LinkedIn</a>
             </nav>
-            <br>
-            <p>Page built by RTFIndustries&copy;</p>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fintroduction.html">
+            <p>Website built by <a href="brand-rapid-tree-frog.html">RTFIndustries&copy;2021</a></p>
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fintroduction.html" style="text-decoration: none;">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
             <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fintroduction.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
