jQuery Slideshow assignment

--- a/itis3135/calculator-try.html
+++ b/itis3135/calculator-try.html
@@ -11,31 +11,33 @@
         <header>
             <h1>Rachel Taylor &middot; ITIS 3135 &middot; Calculator Try</h1>
         </header>
-            <nav>
-                <a href="index.html">Home</a>
-                ||
-                <a href="introduction.html">Introduction</a>
-                ||
-                <a href="tables.html">HTML Tables</a>
-                ||
-                <a href="forms.html">HTML Forms</a>
-                ||
-                <a href="CrAppY-WeBpaGE.html">CRAPPY Webpage</a>
-                ||
-                <a href="website-evaluations.html">Website Evaluations</a>
-                <br>
-                <a href="first-scripts.html">First Scripts</a>
-                ||
-                <a href="name-the-polygon.html">Name The Polygon</a>
-                ||
-                <a href="calculator-try.html">Calculator Try</a>
-                ||
-                <a href="calculator-fcc.html">Calculator freeCodeCamp Tutorial</a>
-                ||
-                <a href="arrays.html">Arrays</a>
-                ||
-                <a href="project-rand.html">Project Design</a>
-            </nav>
+        <nav>
+            <a href="index.html">Home</a>
+            ||
+            <a href="introduction.html">Introduction</a>
+            ||
+            <a href="tables.html">HTML Tables</a>
+            ||
+            <a href="forms.html">HTML Forms</a>
+            ||
+            <a href="CrAppY-WeBpaGE.html">CRAPPY Webpage</a>
+            ||
+            <a href="website-evaluations.html">Website Evaluations</a>
+            <br>
+            <a href="first-scripts.html">First Scripts</a>
+            ||
+            <a href="name-the-polygon.html">Name The Polygon</a>
+            ||
+            <a href="calculator-try.html">Calculator Try</a>
+            ||
+            <a href="calculator-fcc.html">Calculator freeCodeCamp Tutorial</a>
+            ||
+            <a href="arrays.html">Arrays</a>
+            ||
+            <a href="project-rand.html">Project Design</a>
+            <br>
+            <a href="jquery-slideshow.html">Picture Slideshow</a>
+        </nav>
         <main>
             <h2>Calculator Try</h2>
                 <h3>Description</h3>
