--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -33,6 +33,8 @@
                 <a href="arrays.html">Arrays</a>
                 ||
                 <a href="project-rand.html">Project Design</a>
+                <br>
+                <a href="jquery-slideshow.html">Picture Slideshow</a>
             </nav>
         <main>
             <h2>Home</h2>
