Practice Activity - Build an Order Site

--- a/itis3135/calculator-try.html
+++ b/itis3135/calculator-try.html
@@ -37,6 +37,8 @@
             <a href="project-rand.html">Project Design</a>
             <br>
             <a href="jquery-slideshow.html">Picture Slideshow</a>
+            ||
+            <a href="Practice.html">Practice Activity</a>
         </nav>
         <main>
             <h2>Calculator Try</h2>
