--- a/itis3135/jquery-slideshow.html
+++ b/itis3135/jquery-slideshow.html
@@ -66,6 +66,8 @@
                 <a href="project-rand.html">Project Design</a>
                 <br>
                 <a href="jquery-slideshow.html">Picture Slideshow</a>
+                ||
+                <a href="Practice.html">Practice Activity</a>
             </nav>
         <main>
             <h2>Picture Slideshow</h2>
