--- a/itis3135/brand-rapid-tree-frog.html
+++ b/itis3135/brand-rapid-tree-frog.html
@@ -39,6 +39,8 @@
             <a href="project-rand.html">Project Design</a>
             <br>
             <a href="jquery-slideshow.html">Picture Slideshow</a>
+            ||
+            <a href="Practice.html">Practice Activity</a>
         </nav>
         <main>
             <h2>Rapid Tree Frog Industries Brand Page</h2>
