--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -36,6 +36,8 @@
             <a href="project-rand.html">Project Design</a>
             <br>
             <a href="jquery-slideshow.html">Picture Slideshow</a>
+            ||
+            <a href="Practice.html">Practice Activity</a>
         </nav>
         <main>
             <h2>Introduction</h2>
