--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-I'm Rachel Taylor and this is the root of my website
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <link href="styles/default.css" rel="stylesheet" type="text/css">
+        <title>Rachel Taylor &middot; Github &middot; Home</title>
+    </head>
+    <body>
+        <header>
+            <h1>Rachel Taylor &#x2726; Github &#x2726; Home</h1>
+        </header>
+        <nav>
+            &#x276E;
+            <a href="index.html">Github Home</a>
+            &#x276F;
+            &#x276E;
+            <a href="itis3135/">ITIS 3135 Class Webpage</a>
+            &#x276F;
+        </nav>
+        <main>
+            <h2>Home</h2>
+                <figure>
+                    <a href="images/professional-selfie.jpg">
+                        <img src="images/professional-selfie.jpg" height="200" alt="Professional looking Selfie">
+                    </a>
+                    <figcaption>Professional looking Selfie</figcaption>
+                </figure>
+                <p>
+                    First of all, thank you for taking the time to look at this page.
+                    This webpage is being used as an access page to my Web Design and Development website.
+                    The website itself can be found using the ITIS 3135 Class Webpage link above or 
+                    <a href="itis3135/">click here</a>.
+                </p>
+            <h3>About Me</h3>
+                <ul>
+                    <li>
+                        My name is Rachel Taylor and I am as of Fall 2021, currently a senior at
+                        the University of North Carolina at Charlotte (UNC Charlotte). I am studying for 
+                        my Bachelor's in Arts in Computer Science with a concentration in Information 
+                        Technology.
+                    </li>
+                    <li>
+                        I work two jobs currently, one is as a Scare Actor at Carowinds Amusement park
+                        in the entertainment department. My second job is as a Teaching Assistant in 
+                        the College of Computing and Informatics department at the University of North Carolina
+                        at Charlotte. I help in our Introduction to Computer Science II course.
+                    </li>
+                    <li>
+                        Outside of my jobs, I am a sister of the only Science, Technology, Engineering and Mathematics
+                        (STEM), sorority on UNC Charlotte's campus. Alpha Omega Epsilon. I am also the New Membership 
+                        Educator for Alpha Omega Epsilon, where I teach new incoming members, the symbols, traditions and history
+                        of our chapter at UNC Charlotte. 
+                    </li>
+                </ul>
+                <a href="Resume (Oct. 27 '21).pdf">Resume</a>
+            <br>
+            <p>I'm Rachel Taylor and this is the root of my website.</p>
+        </main>
+        <footer>
+            <nav>
+                &#x276E;
+                <a href="https://webpages.uncc.edu/rtaylo96/" target="_blank">Charlotte.edu</a>
+                &#x276F;
+                &#x276E;
+                <a href="https://github.com/rtaylo96" target="_blank">Github</a>
+                &#x276F;
+                &#x276E;
+                <a href="https://itis3135_work/rtaylo96.github.io/index.html" target="_blank">Github.io</a>
+                &#x276F;
+                &#x276E;
+                <a href="https://rtaylo96.github.io/itis3135/" target="_blank">ITIS 3135 Github Pages</a>
+                &#x276F;
+                &#x276E;
+                <a href="https://www.freecodecamp.org/rtaylo96" target="_blank">freeCodeCamp</a>
+                &#x276F;
+                &#x276E;
+                <a href="https://www.linkedin.com/in/rachel-taylor-bb896b143/" target="_blank">LinkedIn</a>
+                &#x276F;
+            </nav>
+        </footer>
+    </body>
+</html>
