--- a/itis3135/brand-rapid-tree-frog.html
+++ b/itis3135/brand-rapid-tree-frog.html
@@ -41,6 +41,8 @@
             <a href="jquery-slideshow.html">Picture Slideshow</a>
             ||
             <a href="Practice.html">Practice Activity</a>
+            ||
+            <a href="contract.html">Contract</a>
         </nav>
         <main>
             <h2>Rapid Tree Frog Industries Brand Page</h2>
