--- a/itis3135/calculator-try.html
+++ b/itis3135/calculator-try.html
@@ -39,6 +39,8 @@
             <a href="jquery-slideshow.html">Picture Slideshow</a>
             ||
             <a href="Practice.html">Practice Activity</a>
+            ||
+            <a href="contract.html">Contract</a>
         </nav>
         <main>
             <h2>Calculator Try</h2>
