--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <link href="styles/default.css" rel="stylesheet" type="text/css">
-        <title>Rachel Taylor | ITIS 3135 | CRAPPY Webpage</title>
+        <title>Rachel Taylor| ITIS 3135 | Home</title>
     </head>
     <body>
         <header>
-            <h1>Rachel Taylor &middot; ITIS 3135 &middot; CRAPPY Webpage</h1>
+            <h1>Rachel Taylor &middot; ITIS 3135 &middot; Home</h1>
         </header>
         <nav>
             <a href="index.html">Home</a>
@@ -41,38 +41,15 @@
             <a href="contract.html">Contract</a>
         </nav>
         <main>
-            <h2>CRAPPY Webpage</h2>
+            <h2>Contract</h2>
+            <p>I, Rachel M. Taylor agree to abide by the terms in my Fall 2021 ITIS 3135 - 051</p>
+            <p>Web Design and Development with my instructor, D. I. von Briesen.</p>
             <br>
+            <p>I understand that all work that I do on my school and personal websites will be publicly available to the world. I</p>
+            <p>will not put information there that is inappropriate for schoolwork, or that I wish to keep private.</p>
             <br>
-            <br>
-            <img src="images/5069596341_91e5c7ad4b_k" width="400" heigh="400" name="Patch Picks Pumpkins Plump and Pretty Pumpkins">
-            <h3 style="color: turquoise">I like seashells, I pick seashells down by the seashore</h3>
-            <br>
-            <br>
-        <div style="border-style: dotted dashed solid double;">
-            <p style="text-align: right">tHiS Is A mIxEd BoRdEr!</p>
-        </div>
-        <p style="font-family: Papyrus, fantasy; margin-top: 25%">This is comic sans text font</p> <br>
-        <a style="font-family: Comic Sans MS, Comic Sans; color: pink"><p>This is papyrus text font</p></a>
-        <a style="font-family: Times;"><p>This is comic papyrus text font</p></a>
-        <img src="https://flic.kr/p/8HZ1nt" name="Not A Cat" style="margin-bottom: 45%">
-            <h2>This is a Photo of Cats</h2>
-        <div style="text-align: center">
-            <ul>
-                <li style="background-color: yellowgreen;">This</li>
-                <li><u>List</u></li>
-                <li>Is</li>
-                <li style="background-color: tomato;">Centered</li>
-            </ul>
-            <br>
-            <br>
-            <p>This Paragraph is centered</p>
-            <br>
-        </div>
-        <p style="font-size: 60px;">This paragraph has huge text</p>
-        <br>
-        <br>
-        <br>
+            <p>Signed:</p>
+            <p>--Rachel M. Taylor, 27 October 2021</p>
         </main>
         <footer>
             <nav>
@@ -89,10 +66,10 @@
                 <a href="https://www.linkedin.com/in/rachel-taylor-bb896b143/" target="_blank">LinkedIn</a>
             </nav>
             <p>Website built by <a href="brand-rapid-tree-frog.html">RTFIndustries&copy;2021</a></p>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2FCRAPPY%2520WEBPAGE%21.htm" style="text-decoration: none;">
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Findex.html" style="text-decoration: none;">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2FCRAPPY%2520WEBPAGE%21.htm&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                 <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
             </a>
         </footer>
