--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -37,10 +37,11 @@
             <a href="jquery-slideshow.html">Picture Slideshow</a>
             ||
             <a href="Practice.html">Practice Activity</a>
+            ||
+            <a href="contract.html">Contract</a>
         </nav>
         <main>
             <h2>Home</h2>
-            <p>I'm Rachel Taylor, and this is my ITIS 3135 First Course website.</p>
             <h3>Webpage Summaries</h3>
                 <h4>Introduction</h4>
                     <p>This webpage is an introduction of myself where you can get to know more about me.</p>
@@ -67,6 +68,14 @@
                     <p>This page is playing with arrays in JavaScript and being sure we have an understanding of arrays in JavaScript.</p>
                 <h4>Project Design</h4>
                     <p>A webpage that is used for summarizing the webpages that will be used for our semester long project.</p>
+                <h4>Picture Slideshow</h4>
+                    <p>Using jQuery, this webpage gives a slideshow of images of the Rapid Tree Frog Industries' Employees.</p>
+                <h4>Practice Activity</h4>
+                    <p>This webpage is a practice activity for the midterm.</p>
+                <h4>Contract</h4>
+                    <p>This page is a contract between the student and professor of the course.</p>
+                <br>
+                <p>I'm Rachel Taylor, and this is my ITIS 3135 First Course website.</p>
         </main>
         <footer>
             <nav>
