--- a/itis3135/Practice.html
+++ b/itis3135/Practice.html
@@ -35,6 +35,8 @@
 		<a href="jquery-slideshow.html">Picture Slideshow</a>
 		||
 		<a href="Practice.html">Practice Activity</a>
+		||
+        <a href="contract.html">Contract</a>
 	</nav>
 	<body>
 		<header>
