--- a/itis3135/forms.html
+++ b/itis3135/forms.html
@@ -37,6 +37,8 @@
             <a href="jquery-slideshow.html">Picture Slideshow</a>
             ||
             <a href="Practice.html">Practice Activity</a>
+            ||
+            <a href="contract.html">Contract</a>
         </nav>
         <main>
             <h2>HTML Forms</h2>
