--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -38,6 +38,8 @@
             <a href="jquery-slideshow.html">Picture Slideshow</a>
             ||
             <a href="Practice.html">Practice Activity</a>
+            ||
+            <a href="contract.html">Contract</a>
         </nav>
         <main>
             <h2>Introduction</h2>
