--- a/itis3135/jquery-slideshow.html
+++ b/itis3135/jquery-slideshow.html
@@ -68,6 +68,8 @@
                 <a href="jquery-slideshow.html">Picture Slideshow</a>
                 ||
                 <a href="Practice.html">Practice Activity</a>
+                ||
+                <a href="contract.html">Contract</a>
             </nav>
         <main>
             <h2>Picture Slideshow</h2>
