--- a/itis3135/project-rand.html
+++ b/itis3135/project-rand.html
@@ -37,6 +37,8 @@
             <a href="jquery-slideshow.html">Picture Slideshow</a>
             ||
             <a href="Practice.html">Practice Activity</a>
+            ||
+            <a href="contract.html">Contract</a>
         </nav>
         <main>
             <h2>Project Design</h2>
