--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <a href="https://github.com/rtaylo96" target="_blank">Github</a>
                 &#x276F;
                 &#x276E;
-                <a href="https://itis3135_work/rtaylo96.github.io/index.html" target="_blank">Github.io</a>
+                <a href="/rtaylo96.github.io/index.html">Github.io</a>
                 &#x276F;
                 &#x276E;
                 <a href="https://rtaylo96.github.io/itis3135/" target="_blank">ITIS 3135 Github Pages</a>
