--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -57,19 +57,19 @@
                  || 
                 <a href="https://github.com/rtaylo96" target="_blank">Github</a>
                  || 
-                <a href="https://rtaylo96.github.io" target="_blank">Github.io</a>
+                <a href="https://rtaylo96.github.io/" target="_blank">Github.io</a>
                  ||
-                <a href="https://rtaylo96.github.io/itis3135/" target="_blank">ITIS 3135 Github Pages</a>
+                <a href="https://rtaylo96.github.io" target="_blank">ITIS 3135 Github Pages</a>
                  ||
                 <a href="https://www.freecodecamp.org/rtaylo96" target="_blank">freeCodeCamp</a>
                  ||
                 <a href="https://www.linkedin.com/in/rachel-taylor-bb896b143/" target="_blank">LinkedIn</a>
             </nav>
             <p>Website built by <a href="brand-rapid-tree-frog.html">RTFIndustries&copy;2021</a></p>
-            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Findex.html" style="text-decoration: none;">
+            <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fcontract.html" style="text-decoration: none;">
                 <img src="images/button-valid-html5.gif" width="88" height="31" alt="Link to HTML validator">
             </a>
-            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Findex.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+            <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fwebpages.uncc.edu%2Frtaylo96%2Fitis3135%2Fcontract.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
                 <img src="images/button-valid-css.gif" width="88" height="31" alt="Link to CSS validator">
             </a>
         </footer>
