--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -38,6 +38,8 @@
             ||
             <a href="Practice.html">Practice Activity</a>
             ||
+            <a href="exercises/Midterm-3/Midterm/Midterm.html">Midterm Activity</a>
+            ||
             <a href="contract.html">Contract</a>
         </nav>
         <main>
@@ -72,6 +74,8 @@
                     <p>Using jQuery, this webpage gives a slideshow of images of the Rapid Tree Frog Industries' Employees.</p>
                 <h4>Practice Activity</h4>
                     <p>This webpage is a practice activity for the midterm.</p>
+                <h4>Midterm Activity</h4>
+                    <p>This webpage was the first midterm activity that took about two hours to code.</p>
                 <h4>Contract</h4>
                     <p>This page is a contract between the student and professor of the course.</p>
                 <br>
