--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -38,6 +38,8 @@
             ||
             <a href="Practice.html">Practice Activity</a>
             ||
+            <a href="exercises/Midterm-3/Midterm/Midterm.html">Midterm Activity</a>
+            ||
             <a href="contract.html">Contract</a>
         </nav>
         <main>
