--- a/itis3135/Practice.html
+++ b/itis3135/Practice.html
@@ -9,36 +9,38 @@
 	</head>
 	<nav>
 		<a href="index.html">Home</a>
-        ||
-        <a href="introduction.html">Introduction</a>
-        ||
-        <a href="tables.html">HTML Tables</a>
-        ||
-        <a href="forms.html">HTML Forms</a>
-        ||
-        <a href="CrAppY-WeBpaGE.html">CRAPPY Webpage</a>
-        ||
-        <a href="website-evaluations.html">Website Evaluations</a>
-        <br>
-        <a href="first-scripts.html">First Scripts</a>
-        ||
-        <a href="name-the-polygon.html">Name The Polygon</a>
-        ||
-        <a href="calculator-try.html">Calculator Try</a>
-        ||
-        <a href="calculator-fcc.html">Calculator freeCodeCamp Tutorial</a>
-        ||
-        <a href="arrays.html">Arrays</a>
-        ||
-        <a href="project-rand.html">Project Design</a>
-        <br>
-        <a href="jquery-slideshow.html">Picture Slideshow</a>
-        ||
-        <a href="Practice.html">Practice Activity</a>
-        ||
-        <a href="exercises/Midterm-3/Midterm/Midterm.html">Midterm Activity</a>
-        ||
-        <a href="contract.html">Contract</a>
+		||
+		<a href="introduction.html">Introduction</a>
+		||
+		<a href="tables.html">HTML Tables</a>
+		||
+		<a href="forms.html">HTML Forms</a>
+		||
+		<a href="CrAppY-WeBpaGE.html">CRAPPY Webpage</a>
+		||
+		<a href="website-evaluations.html">Website Evaluations</a>
+		<br>
+		<a href="first-scripts.html">First Scripts</a>
+		||
+		<a href="name-the-polygon.html">Name The Polygon</a>
+		||
+		<a href="calculator-try.html">Calculator Try</a>
+		||
+		<a href="calculator-fcc.html">Calculator freeCodeCamp Tutorial</a>
+		||
+		<a href="arrays.html">Arrays</a>
+		||
+		<a href="project-rand.html">Project Design</a>
+		<br>
+		<a href="jquery-slideshow.html">Picture Slideshow</a>
+		||
+		<a href="Practice.html">Practice Activity</a>
+		||
+		<a href="exercises/Midterm-3/Midterm/Midterm.html">Midterm Activity</a>
+		||
+		<a href="exercises/taylor-activity10.html">Image Swap Application</a>
+		||
+		<a href="contract.html">Contract</a>
 	</nav>
 	<body>
 		<header>
