--- a/itis3135/exercises/Midterm-3/Midterm/Midterm.html
+++ b/itis3135/exercises/Midterm-3/Midterm/Midterm.html
@@ -68,6 +68,8 @@
     <a href="https://validator.w3.org/">Validate HTML</a>
     <br/>
     <a href="https://jigsaw.w3.org/css-validator/">Validate CSS</a>
+    <br>
+	<a href="https://webpages.uncc.edu/rtaylo96/itis3135/index.html">Return to Home Page</a>
 </footer>
 </body>
 </html>
