--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -40,6 +40,8 @@
             ||
             <a href="exercises/Midterm-3/Midterm/Midterm.html">Midterm Activity</a>
             ||
+            <a href="exercises/taylor-activity10.html">Image Swap Application</a>
+            ||
             <a href="contract.html">Contract</a>
         </nav>
         <main>
@@ -78,6 +80,8 @@
                     <p>This webpage was the first midterm activity that took about two hours to code.</p>
                 <h4>Contract</h4>
                     <p>This page is a contract between the student and professor of the course.</p>
+                <h4>Image Swap Application</h4>
+                    <p>An application that is uses jQuery effects and animation.</p>
                 <br>
                 <p>I'm Rachel Taylor, and this is my ITIS 3135 First Course website.</p>
         </main>
