--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -41,6 +41,8 @@
             ||
             <a href="exercises/Midterm-3/Midterm/Midterm.html">Midterm Activity</a>
             ||
+            <a href="exercises/taylor-activity10.html">Image Swap Application</a>
+            ||
             <a href="contract.html">Contract</a>
         </nav>
         <main>
