--- a/itis3135/project-rand.html
+++ b/itis3135/project-rand.html
@@ -167,13 +167,15 @@
         </main>
         <footer>
             <nav>
+                <a href="project/index.html" target="_blank">Project Rotaract</a>
+                 ||
                 <a href="https://webpages.uncc.edu/rtaylo96/" target="_blank">Charlotte.edu</a>
                  || 
                 <a href="https://github.com/rtaylo96" target="_blank">Github</a>
                  || 
-                <a href="https://rtaylo96.github.io" target="_blank">Github.io</a>
+                <a href="https://rtaylo96.github.io/" target="_blank">Github.io</a>
                  ||
-                <a href="https://rtaylo96.github.io/itis3135/" target="_blank">ITIS 3135 Github Pages</a>
+                <a href="https://rtaylo96.github.io" target="_blank">ITIS 3135 Github Pages</a>
                  ||
                 <a href="https://www.freecodecamp.org/rtaylo96" target="_blank">freeCodeCamp</a>
                  ||
