--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -87,6 +87,8 @@
         </main>
         <footer>
             <nav>
+                <a href="project/index.html" target="_blank">Project Rotaract</a>
+                 ||
                 <a href="https://webpages.uncc.edu/rtaylo96/" target="_blank">Charlotte.edu</a>
                  || 
                 <a href="https://github.com/rtaylo96" target="_blank">Github</a>
