Finished Activity 11/ Starting Activity 12

--- a/itis3135/CrAppY-WeBpaGE.html
+++ b/itis3135/CrAppY-WeBpaGE.html
@@ -42,6 +42,8 @@
             ||
             <a href="exercises/taylor-activity10.html">Image Swap Application</a>
             ||
+            <a href="exercises/Taylor-Activity11.html">Accordion Widget</a>
+            ||
             <a href="contract.html">Contract</a>
         </nav>
         <main>
