--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -42,11 +42,15 @@
             ||
             <a href="exercises/taylor-activity10.html">Image Swap Application</a>
             ||
+            <a href="exercises/Taylor-Activity11.html">Accordion Widget</a>
+            ||
             <a href="contract.html">Contract</a>
         </nav>
         <main>
             <h2>Home</h2>
             <h3>Webpage Summaries</h3>
+                <h4>Project Rotaract</h4>
+                    <p>This is a webpage that is a project about District 7680 Rotaract Club. More information can be found at this <a href="project/">link</a> or you can access this pages in the footer below.</p>
                 <h4>Introduction</h4>
                     <p>This webpage is an introduction of myself where you can get to know more about me.</p>
                 <h4>HTML Tables</h4>
@@ -78,10 +82,12 @@
                     <p>This webpage is a practice activity for the midterm.</p>
                 <h4>Midterm Activity</h4>
                     <p>This webpage was the first midterm activity that took about two hours to code.</p>
-                <h4>Contract</h4>
-                    <p>This page is a contract between the student and professor of the course.</p>
                 <h4>Image Swap Application</h4>
                     <p>An application that is uses jQuery effects and animation.</p>
+                <h4>Accordion Widget</h4>
+                    <p>An application that works with jQuery plugins and UIs, specifically the Accordion Widget.</p>
+                <h4>Contract</h4>
+                    <p>This page is a contract between the student and professor of the course.</p>
                 <br>
                 <p>I'm Rachel Taylor, and this is my ITIS 3135 First Course website.</p>
         </main>
