--- a/itis3135/Practice.html
+++ b/itis3135/Practice.html
@@ -40,6 +40,8 @@
 		||
 		<a href="exercises/taylor-activity10.html">Image Swap Application</a>
 		||
+		<a href="exercises/Taylor-Activity11.html">Accordion Widget</a>
+		||
 		<a href="contract.html">Contract</a>
 	</nav>
 	<body>
