--- a/itis3135/exercises/Taylor-Activity12.html
+++ b/itis3135/exercises/Taylor-Activity12.html
@@ -32,6 +32,8 @@
         <br/>
         <a href="https://validator.w3.org/check?uri=referer">Validate HTML</a>
         <a href="https://jigsaw.w3.org/css-validator/check/referer">Validate CSS</a>
+        <br>
+		<a href="https://webpages.uncc.edu/rtaylo96/itis3135/index.html">Return to Home Page</a>
     </footer>
 </body>
 </html>
