--- a/itis3135/name-the-polygon.html
+++ b/itis3135/name-the-polygon.html
@@ -45,6 +45,8 @@
             <a href="exercises/taylor-activity10.html">Image Swap Application</a>
             ||
             <a href="exercises/Taylor-Activity11.html">Accordion Widget</a>
+            <br>
+            <a href="exercises/Taylor-Activity12.html">bxSlider Plugin</a>
             ||
             <a href="contract.html">Contract</a>
         </nav>
